# rubyshd

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  ruby.sh.src.css  tailwind.config.js
public/: index.html  tmpl.html.hbs
src/: config.rs  context.rs  files.rs  main.rs  md2gemtext.rs  openbsd.rs  protocol.rs  request.rs  response.rs  router.rs  templates.rs  tls.rs
