[package]
name = "rubyshd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
env_logger = "0.10" # 0.11 requires 1.71 MSRV even as a dev-dep (due to manifest features)
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
rcgen = { version = "0.13", features = ["pem", "aws_lc_rs"], default-features = false }
rustls = { version = "0.23.4", features = [ "logging" ]}
rustls-pemfile = "2"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.34.0", features = ["io-util", "macros", "net", "rt"] }
tokio-rustls = "0.26.0"
webpki-roots = "0.26"
x509-parser = "0.16.0"
