[package]
name = "rubyshd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
bytes = "1.6.0"
cached = "0.53.1"
caches = "0.2" 
env_logger = "0.10" # 0.11 requires 1.71 MSRV even as a dev-dep (due to manifest features)
glob = "0.3.1"
handlebars = "6.1.0"
httparse = "1.8.0"
log = { version = "0.4.4" }
mime_guess = "2.0.5"
mio = { version = "0.8", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
rcgen = { version = "0.13", features = ["pem", "aws_lc_rs"], default-features = false }
rustls = { version = "0.23.4", features = [ "logging" ]}
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.128"
tokio = { version = "1.34.0", features = ["full"] }
tokio-rustls = "0.26.0"
url = "2.5.0"
webpki-roots = "0.26"
x509-parser = "0.16.0"

[target.'cfg(target_os = "openbsd")'.dependencies]
openbsd = "0.1.2"
